<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Views.login.LoginFragment">

    <ImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@mipmap/ic_launcher_round" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:fontFamily="@font/bebas_neue"
        android:gravity="center"
        android:text="@string/login_to_let_s_buy"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:textColor="#FF304F"
        android:textSize="@dimen/_24sdp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_32sdp"
        android:layout_marginVertical="@dimen/_4sdp"
        android:hint="@string/user_email"
        app:endIconMode="clear_text"
        app:helperText="Required"
        app:helperTextEnabled="true"
        app:helperTextTextColor="#FB0101"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_32sdp"
        android:hint="@string/user_password"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:endIconMode="password_toggle"
        app:helperText="Required"
        app:helperTextEnabled="true"
        app:helperTextTextColor="#FB0101"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textWebPassword"
            android:lines="1"
            android:maxLength="20"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_32sdp"
        android:layout_marginTop="@dimen/_32sdp"
        android:backgroundTint="#FF304F"
        android:text="@string/login"
        android:textColor="#040E47"
        android:textSize="@dimen/_16sdp"
        app:strokeColor="#FF304F"
        app:strokeWidth="@dimen/_2sdp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_32sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/don_t_have_an_account"
        android:textColor="#FF304F"
        android:textSize="@dimen/_12sdp" />

    <Button
        android:id="@+id/btn_register"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_32sdp"
        android:text="@string/register"
        android:textColor="#040E47"
        android:textSize="@dimen/_16sdp"
        app:strokeColor="#FF9800"
        app:strokeWidth="@dimen/_2sdp" />


</LinearLayout>